--- a/levelC.html
+++ b/levelC.html
@@ -5,8 +5,8 @@
     <title>level C</title>
   </head>
   <body>
-    <img src="두번째.jpg" alt="" width="700px">
+    <img src="123.jpg" alt="" width="700px">
     <br>
-    <img src="미술관.jpg" alt="" width="700px">
+    <img src="234.jpg" alt="" width="700px">
   </body>
 </html>
