--- a/index.html
+++ b/index.html
@@ -23,16 +23,16 @@
   <body>
     <div>
      <img src="글씨.jpg" alt="" width="200px">
-     <img src="슬라이드1.jpg" alt="" width="200px">
+     <img src="슬라이드1.JPG" alt="" width="200px">
      <img src="볼펜.jpg" alt="" width="200px">
-     <img src="슬라이드2.jpg" alt="" width="200px">
+     <img src="슬라이드2.JPG" alt="" width="200px">
      <form action='birthday.html'>
      ID : <input id='userid' type='text'/ placeholder="이름을 입력해주세요."><br>
      <input type='submit' value='로그인'>
      </form>
-     <img src="슬라이드3.jpg" alt="" width="200px">
+     <img src="슬라이드3.JPG" alt="" width="200px">
      <img src="33가구.jpg" alt="" width="200px">
-     <img src="슬라이드4.jpg" alt="" width="200px">
+     <img src="슬라이드4.JPG" alt="" width="200px">
      <img src="시계.jpg" alt="" width="200px">
     </div>
     <audio src="kiss.mp3" autoplay controls>
