--- a/exit.html
+++ b/exit.html
@@ -5,6 +5,7 @@
     <title>생일 축하합니다~♪</title>
   </head>
   <body>
-    여기에서 같이 "생일 축하합니다~♪" 해주는 동영상을 넣으면 어떨까 싶어요!
+    <br>
+    <video src="생일축하합니다.mp4" controls autoplay></video>
   </body>
 </html>
