--- a/levelB.html
+++ b/levelB.html
@@ -14,6 +14,6 @@
     <script>
    var result = prompt( '제일 좋아하는 마블 캐릭터는?', '' );
     </script>
-    저는 여기에 편지 쓴 거를 사진으로 찍어서 올릴 거예요!
+    <img src="편지.">
   </body>
 </html>
