--- a/levelB.html
+++ b/levelB.html
@@ -14,6 +14,6 @@
     <script>
    var result = prompt( '제일 좋아하는 마블 캐릭터는?', '' );
     </script>
-    <img src="편지.">
+    <img src="편지.jpg">
   </body>
 </html>
