--- a/exit.html
+++ b/exit.html
@@ -6,6 +6,6 @@
   </head>
   <body>
     <br>
-    <video src="생일축하합니다.mp4" controls autoplay></video>
+    <video src="생일축하합니다3.mp4" controls autoplay></video>
   </body>
 </html>
