--- a/birthday.html
+++ b/birthday.html
@@ -23,10 +23,14 @@
    var result = prompt( '죄송하지만 다시 한 번 이름을 말해주실래요?', '' );
    document.write( result );
     </script>
-    님 환영합니다! 귀하는 모든 정보에 접근할 수 있는 권한을 보유하고 계십니다.
-      <li><a href="levelC.html" target="_blank">레벨 C 정보</a></li>
-      <li><a href="levelB.html" target="_blank">레벨 B 정보</a></li>
-      <li><a href="levelA.html" target="_blank">레벨 A 정보</a></li>
+    님 환영합니다!
+    <script>
+       document.write( result );
+    </script> 
+    님은 VVIP등급 회원이므로 모든 전시관을 관람하실 수 있습니다. 천천히 둘러보셔요!
+      <li><a href="levelC.html" target="_blank">제 1 전시관</a></li>
+      <li><a href="levelB.html" target="_blank">제 2 전시관</a></li>
+      <li><a href="levelA.html" target="_blank">제 3 전시관</a></li>
       <br>
       <div class="">
         <img src="생일1.jpg" alt="" width="200px">
