--- a/levelA.html
+++ b/levelA.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>레벨A 정보</title>
+    <title>제 3 전시관</title>
     <style>
     body {
       text-align: center;
