--- a/levelB.html
+++ b/levelB.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>레벨B 정보</title>
+    <title>제 2 전시관</title>
     <style>
      body {
       text-align:center;
@@ -14,6 +14,7 @@
     <script>
    var result = prompt( '제일 좋아하는 마블 캐릭터는?', '' );
     </script>
+    제 2 전시관에는 편지를 전시해놨습니다. 다 관람하시면 불러주세요!
     <img src="편지.jpg">
   </body>
 </html>
