--- a/levelC.html
+++ b/levelC.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>레벨C 정보</title>
+    <title>제 1 전시관</title>
     <style>
      body {
       text-align:center;
