--- a/birthday.html
+++ b/birthday.html
@@ -27,7 +27,7 @@
     <script>
        document.write( result );
     </script> 
-    님은 VVIP등급 회원이므로 모든 전시관을 관람하실 수 있습니다. 천천히 둘러보셔요!
+    님은 VVIP등급 회원이시므로 모든 전시관을 관람하실 수 있습니다. 천천히 둘러보셔요!
       <li><a href="levelC.html" target="_blank">제 1 전시관</a></li>
       <li><a href="levelB.html" target="_blank">제 2 전시관</a></li>
       <li><a href="levelA.html" target="_blank">제 3 전시관</a></li>
